Fixes alignment of Relic Hunter icon/highlight on travel pages

--- a/src/modules/better-travel/styles.css
+++ b/src/modules/better-travel/styles.css
@@ -262,7 +262,7 @@
 
 .travelPage-alpha-wrapper .travelPage-regionMenu-environmentLink.relic-hunter-is-here,
 .travelPage-regionMenu-environmentLink.relic-hunter-is-here {
-  padding-left: 30px;
+  padding-left: 35px;
   margin-right: 5px;
   margin-left: 5px;
   background-color: #e0f2d5;
